# iTrace-Archive

./: .classpath  .gitignore  .project  LICENSE.md  README.md  README.txt  build.properties  buildlib.bat  buildlib.sh  ivy.xml  plugin.xml  pom.xml
build-enginetest-Desktop_Qt_5_8_0_MSVC2015_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
docs/: class_diagram.uxf  iTraceTesting.xlsx
jni/: .gitignore  CMakeLists.txt  TOBII.README.txt  TOBIITRACKER.README.md  edu_ysu_itrace_TobiiTracker.cpp  edu_ysu_itrace_TobiiTracker.h  edu_ysu_itrace_TobiiTracker_BackgroundThread.h  edu_ysu_itrace_TobiiTracker_Calibrator.h  edu_ysu_itrace_trackers_EyeXTracker.c  edu_ysu_itrace_trackers_EyeXTracker.cpp  edu_ysu_itrace_trackers_EyeXTracker.h  edu_ysu_itrace_trackers_TobiiTracker.cpp  edu_ysu_itrace_trackers_TobiiTracker.h  edu_ysu_itrace_trackers_TobiiTracker_BackgroundThread.h  edu_ysu_itrace_trackers_TobiiTracker_Calibrator.h  eyetracker.cpp  eyetracker.h
jni/EyeXTracker/: CMakeLists.txt  Common.h  EYEXTRACKER.README.md  edu_ysu_itrace_trackers_EyeXTracker.cpp  edu_ysu_itrace_trackers_EyeXTracker.h  edu_ysu_itrace_trackers_EyeXTrackerOld.cpp  edu_ysu_itrace_trackers_EyeXTracker_BackgroundThread.h  edu_ysu_itrace_trackers_EyeXTracker_Calibrator.h
jni/EyeXTracker/CSharp/: EyeXTracker.cs
jni/TobiiTracker/: CMakeLists.txt  TOBIITRACKER.README.md  build_boost.sh  edu_ysu_itrace_trackers_TobiiTracker.cpp  edu_ysu_itrace_trackers_TobiiTracker.h
jni/eyeX/: edu_ysu_itrace_trackers_EyeXTracker.c  edu_ysu_itrace_trackers_EyeXTracker.h
jni/eyex/: EyeX.h  EyeXActions.h  EyeXAsyncData.h  EyeXBehavior.h  EyeXBounds.h  EyeXClientTypes.h  EyeXCommand.h  EyeXContext.h  EyeXEvent.h  EyeXFrameworkTypes.h  EyeXInteractor.h  EyeXInternalLiterals.h  EyeXLiterals.h  EyeXMacros.h  EyeXNotification.h  EyeXObject.h  EyeXProperty.h  EyeXQuery.h  EyeXSnapshot.h  EyeXStates.h  EyeXSystem.h  EyeXUtils.h
src/: plugin.xml  pom.xml
src/edu/ysu/itrace/: Activator.java  Aoi.java  AoiRepository.java  AstManager.java  BRManager.java  CalibrationStatusDisplay.java  Calibrator.java  ClassMLManager.java  ControlView.java  EngineSocket.java  EyeStatusView.java  EyeStatusWindow.java  EyeStatusWnd.java  Gaze.java  (+25 more)
tools/: tobiisim.rb
(+79 files in other folders)
