cmake_minimum_required(VERSION 2.6)
project(iTrace_JNI)
set(CMAKE_JNI_TARGET TRUE)
set(CMAKE_JAVA_TARGET_VERSION 1.6.0)
option(BUILD_TOBIITRACKER "Build the TobiiTracker library." ON)
if(BUILD_TOBIITRACKER)
	set(Boost_USE_FILESYSTEM ON)
	set(Boost_USE_REGEX ON)
	set(Boost_USE_THREAD ON)
	set(Boost_USE_SYSTEM ON)
	find_package(Boost 1.40 REQUIRED COMPONENTS filesystem regex thread system)
	find_package(JNI REQUIRED)
	include_directories(${JNI_INCLUDE_DIRS})
	add_library(TobiiTracker SHARED edu_ysu_itrace_TobiiTracker.cpp)
	target_link_libraries(TobiiTracker tobiisdk)
endif(BUILD_TOBIITRACKER)
