cmake_minimum_required(VERSION 2.6)
project(iTrace_JNI)
set(CMAKE_JNI_TARGET TRUE)
set(CMAKE_JAVA_TARGET_VERSION 1.6.0)
option(BUILD_TOBIITRACKER "Build the TobiiTracker library." ON)
if(BUILD_TOBIITRACKER)
	set(Boost_USE_FILESYSTEM ON)
	set(Boost_USE_REGEX ON)
	set(Boost_USE_THREAD ON)
	set(Boost_USE_SYSTEM ON)
	if(WIN32)
		set(CMAKE_SHARED_LINKER_FLAGS
			"-D_JNI_IMPLEMENTATION_ -Wl,--kill-at,--allow-multiple-definition")
	endif()
	find_package(Boost 1.40 REQUIRED COMPONENTS filesystem regex thread system)
	find_package(JNI REQUIRED)
	include_directories(${JNI_INCLUDE_DIRS})
	add_library(TobiiTracker SHARED edu_ysu_itrace_trackers_TobiiTracker.cpp)
	include_directories(${Boost_INCLUDE_DIR})
	target_link_libraries(TobiiTracker tetio ${Boost_FILESYSTEM_LIBRARY}
		${Boost_REGEX_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY})
endif(BUILD_TOBIITRACKER)
