cmake_minimum_required(VERSION 2.6)
project(iTrace_JNI)
set(CMAKE_JNI_TARGET TRUE)
set(CMAKE_JAVA_TARGET_VERSION 1.6.0)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
option(BUILD_EYEXTRACKER "Build the EyeXTracker library." ON)
if(BUILD_EYEXTRACKER)
	if(WIN32)
		set(CMAKE_SHARED_LINKER_FLAGS
			"-D_JNI_IMPLEMENTATION_ -Wl,--kill-at,--allow-multiple-definition")
	endif()
	find_package(JNI REQUIRED)
	include_directories(${JNI_INCLUDE_DIRS})
	add_library(EyeXTracker SHARED edu_ysu_itrace_trackers_EyeXTracker.cpp)
	target_link_libraries(EyeXTracker TobiiGazeCore32)
endif(BUILD_EYEXTRACKER)
